# wilford

./: Makefile  README.md  config_docker.json  docker-compose.yml  email_banner.hbs  localhost-key.pem  localhost.pem  nginx.conf  oauth2_proxy.docker-compose.yml  sample_config.json  sample_config_docker.json  test_oidc_key.pem  test_oidc_key.pem.pub
server/database/: Cargo.toml
server/database/migrations/: 1_initial.sql  2_user_credentials.sql  3_locale.sql  4_email_verification.sql
server/database/src/: constant_access_tokens.rs  oauth2_client.rs  user.rs
server/mailer/: Cargo.toml  build.rs
server/mailer/partials/: header.hbs
server/mailer/src/: conn.rs  error.rs  ipv4.rs  lib.rs  locale.rs  mailer.rs  template.rs
server/mailer/src/email/: email_changed.rs  mod.rs  password_changed.rs  password_forgotten.rs  verify_email.rs
server/mailer/templates/: README.md  email_changed.en.hbs  email_changed.nl.hbs  password_changed.en.hbs  password_changed.nl.hbs  password_forgotten.en.hbs  password_forgotten.nl.hbs  verify_email.en.hbs  verify_email.nl.hbs
server/wilford/: Cargo.toml
server/wilford/src/: config.rs  mail.rs  main.rs
server/wilford/src/authorization/: combined.rs  espo.rs  local_provider.rs  mod.rs
server/wilford/src/authorization_backends/: espocrm.rs  mod.rs
server/wilford/src/espo/: user.rs
server/wilford/src/response_types/: mod.rs  set_cookie.rs  uncached.rs
server/wilford/src/routes/: appdata.rs  auth.rs  error.rs  mod.rs
server/wilford/src/routes/oauth/: authorize.rs  token.rs
server/wilford/src/routes/v1/auth/: authorization_info.rs  authorize.rs  login.rs  token_info.rs
server/wilford/src/routes/v1/cat/: add.rs  list.rs  remove.rs
server/wilford/src/routes/v1/clients/: add.rs  internal.rs  list.rs  remove.rs
server/wilford/src/routes/v1/user/: change_email.rs  change_name.rs  info.rs  (+8 more)
server/wilford/src/routes/well_known/: jwks.rs  mod.rs  openid_configuration.rs
(+60 files in other folders)
