[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.9"
handlebars = { version = "6.2.0" }
lettre = { version = "0.11.11", features = ["smtp-transport", "tokio1-rustls-tls", "builder"], default-features = false }
nix = { version = "0.29.0", features = ["net"] }
tokio = { version = "1.42.0", features = ["net", "time", "test-util", "macros"] }
futures-util = "0.3.31"
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
include_directory = "0.1.1"
database = { path = "../database" }